# adventofcode

./: .gitignore  README.md  aoc2024.opam  dune-project
2024/: README.md
2024/input/: day07
2024/lib/: day03.ml  day04.ml  day07.ml  day08.ml  day09.ml
lib/: day01.ml  day02.ml  day05.ml  day06.ml
