(lang dune 3.16)

(name aoc2024)

(generate_opam_files true)

(source
 (github fwznbg/aoc2024))

(authors "Fawwaz N")

(maintainers "None")

(license MIT)

(package
 (name aoc2024)
 (synopsis "OCaml Advent of Code 2024")
 (description "This is a collection of my solutions to the Advent of Code 2024 challenges using OCaml which aim to familiarize myself with the language.")
 (depends ocaml dune)
 (tags
  ("ocaml" "advent-of-code" "aoc2024")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
